<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.raven-source</groupId>
        <artifactId>raven-framework</artifactId>
        <version>4.0.7</version>
    </parent>

    <artifactId>raven-mongodb</artifactId>
    <version>3.0.0</version>
    <packaging>pom</packaging>
    <modules>
        <module>raven-mongodb-repository-core</module>
        <module>raven-mongodb-repository-spi</module>
        <module>raven-mongodb-repository-sync</module>
        <module>raven-mongodb-repository-reactive</module>
        <module>raven-mongodb-repository-performance</module>
        <module>raven-mongodb-repository-spring</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <encoding>UTF-8</encoding>
        <java.version>8</java.version>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>

        <raven-framework.version>4.0.7</raven-framework.version>
        <mongodb-driver.version>4.4.2</mongodb-driver.version>

        <raven-mongodb.version>${project.version}</raven-mongodb.version>

    </properties>

    <dependencies>

        <dependency>
            <groupId>io.github.raven-source</groupId>
            <artifactId>raven-commons</artifactId>
            <version>${raven-framework.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>annotations</artifactId>
            <version>3.0.1</version>
        </dependency>

    </dependencies>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>Raven Mongodb Library</description>
    <url>https://raven-source.github.io/</url>

    <scm>
        <url>https://github.com/Raven-Source/raven-mongodb-java</url>
        <connection>scm:git:https://github.com/Raven-Source/raven-mongodb-java.git</connection>
        <developerConnection>scm:git:https://github.com/Raven-Source/raven-mongodb-java.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>yi.liang</name>
            <email>indifer@126.com</email>
            <organization>raven</organization>
            <organizationUrl>https://github.com/Raven-Source</organizationUrl>
        </developer>
    </developers>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- mvn versions:set -DprocessAllModules=true -DnewVersion=1.x-SNAPSHOT -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>

        </plugins>

    </build>

</project>